--- a/build.xml
+++ b/build.xml
@@ -9,10 +9,10 @@
   <property environment="env"/>
 
   <!-- The major and minor version numbers  -->
-  <property name="version-major"   	value="0"/>
+  <property name="version-major"   		value="0"/>
   <property name="version-minor"        value="7"/>
   <property name="version-revision"     value="2"/>
-  <property name="version-status"       value="-SNAPSHOT"/>
+  <property name="version-status"       value="-dev"/>
   <property name="version"
             value="${version-major}.${version-minor}.${version-revision}${version-status}"/>
   
