--- a/.classpath
+++ b/.classpath
@@ -24,7 +24,7 @@
 	<classpathentry kind="lib" path="lib/arq-extra.jar" sourcepath="arq-src.zip"/>
 	<classpathentry kind="lib" path="lib/slf4j-api-1.5.6.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-log4j12-1.5.6.jar"/>
-	<classpathentry kind="lib" path="lib/junit-4.5.jar" sourcepath="C:/home/afs/jlib/junit4.5/junit-4.5-src.jar"/>
 	<classpathentry kind="lib" path="lib/antlr-2.7.5.jar"/>
+	<classpathentry kind="lib" path="lib/junit-4.5.jar" sourcepath="src-other/junit-4.5-src.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
