Changes to make clean compiler with Sun javac compilers.
git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-CVS/jena2/trunk@1113761 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -159,6 +159,7 @@
        target="${java.target}">
       <classpath refid="classpath" />
       <compilerarg value="-Xlint:deprecation"/>
+      <compilerarg value="-Xlint:unchecked"/>
     </javac>
     <copy todir="${classes.dir}" file="${bldsrc.dir}/log4j.properties"/>
   </target>
