git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/TDB/trunk@1121159 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,8 @@
 <project xmlns:ivy="antlib:org.apache.ivy.ant" name="TDB" default="build">
 
+  <!-- Configuration as a propertied file ? -->
+  <!-- <property file="tdb-build.properties"/> -->
+
   <!-- ========================================== -->
   <!-- ==== Configuration  -->
   <property name="Name"                   value="TDB"/>
