--- a/ivy.xml
+++ b/ivy.xml
@@ -21,7 +21,7 @@
     <!-- Need a second module to get the maven name right? -->
     <!-- <artifact name="arq-extra" type="jar"/> -->
     <artifact name="arq" type="xml" ext="pom"/>
-    <!-- <artifact name="arq" mvn:classifier="sources" type="sources" ext="jar"/> -->
+    <artifact name="arq" mvn:classifier="sources" type="sources" ext="jar"/>
     <artifact name="arq" mvn:classifier="javadoc" type="javadoc" ext="jar"/>
   </publications>
 
@@ -36,6 +36,8 @@
     <dependency org="org.apache.lucene" name="lucene-core" rev="2.3.1"/>
     <dependency org="stax" name="stax-api" rev="1.0"/>
     <dependency org="woodstox" name="wstx-asl" rev="3.0.0"/>
+    <dependency org="junit" name="junit" rev="4.5"/>
+    <dependency org="org.slf4j" name="slf4j-api" rev="1.5.6"/>
   </dependencies>
 
 </ivy-module>
