--- a/build.xml
+++ b/build.xml
@@ -13,7 +13,7 @@
   <property name="version-major"   value="2"/>
   <property name="version-minor"   value="6.0"/>
   <!-- e.g. -beta1, or empty string for stable releases -->
-  <property name="version-status"  value="-preview-1"/>
+  <property name="version-status"  value="-RC-0"/>
 
   <property name="version"         value="${version-major}.${version-minor}${version-status}"/>
 
