*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-CVS/iri/trunk@1108433 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -6,7 +6,7 @@
     <!-- default value useful in Jeremy's development environment -->
     <property name="jena.home" value="../jena2"/>
 
-    <property name="dist.name" value="iri-0.6-dev"/>
+    <property name="dist.name" value="iri-0.6"/>
 
     <property name="lib.dir" value="lib/"/>
     <property name="src.dir" value="src/"/>
