--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <artifactId>iri</artifactId>
   <packaging>jar</packaging>
   <name>Jena IRI</name>
-  <version>0.6-SNAPSHOT</version>
+  <version>0.6</version>
   <description/>
   <url>http://jena.sf.net/iri</url>
 
