--- a/build.xml
+++ b/build.xml
@@ -14,7 +14,7 @@
   <property name="version-major"   	value="2"/>
   <property name="version-minor"        value="7"/>
   <property name="version-revision"     value="0"/>
-  <property name="version-status"       value="-dev"/>
+  <property name="version-status"       value=""/>
   <property name="version"
             value="${version-major}.${version-minor}.${version-revision}${version-status}"/>
   
