--- a/ivy.xml
+++ b/ivy.xml
@@ -14,6 +14,7 @@
 
   <configurations defaultconfmapping="main->*">
     <conf name="main" description="ARQ" />
+    <conf name="dev" description="ARQ development" extends="main" />
   </configurations>
 
   <publications>
@@ -29,9 +30,10 @@
     <!-- Because Jena depends on ARQ, these can also be obtained via Jena
 	 For clarity on which ARQ really dependences, we list here
     -->
- 
+
     <dependency org="com.hp.hpl.jena" name="jena" rev="2.6.0"/>
     <dependency org="com.hp.hpl.jena" name="jenatest" rev="2.6.0"/>
+
     <dependency org="com.hp.hpl.jena" name="json-jena" rev="1.0"/>
     <dependency org="org.apache.lucene" name="lucene-core" rev="2.3.1"/>
     <dependency org="stax" name="stax-api" rev="1.0"/>
