--- a/build.xml
+++ b/build.xml
@@ -13,7 +13,7 @@
   <property name="version-major"   value="2"/>
   <property name="version-minor"   value="6.0"/>
   <!-- e.g. -beta1, or empty string for stable releases -->
-  <property name="version-status"  value="-RC-2"/>
+  <property name="version-status"  value=""/>
 
   <property name="version"         value="${version-major}.${version-minor}${version-status}"/>
 
@@ -429,7 +429,6 @@
     <copy todir="${dist.dir}" file="test.bat"/>
     <copy todir="${dist.dir}" file="test.sh"/>
     <copy todir="${dist.dir}" file="test-db.sh"/>
-    <copy todir="${dist.dir}" file="test-dig.sh"/>
     <copy todir="${dist.dir}" file="readme.html"/>
     <copy todir="${dist.dir}/${etc.dir}">
       <fileset dir="${etc.dir}" includes="**"/>
