--- a/build.xml
+++ b/build.xml
@@ -11,15 +11,15 @@
 
   <!-- Release version labels -->
   <property name="version-major"   value="2"/>
-  <property name="version-minor"   value="6.0"/>
+  <property name="version-minor"   value="6.1"/>
   <!-- e.g. -beta1, or empty string for stable releases -->
-  <property name="version-status"  value=""/>
+  <property name="version-status"  value="-dev"/>
 
   <property name="version"         value="${version-major}.${version-minor}${version-status}"/>
 
   <!-- Output file names and locations -->
   <property name="dist.name"       value="${Name}-${version}"/>
-  <property name="dist.zip.name"   value="${Name}-${version}.zip"/>
+  <property name="dist.zip.name"   value="${name}-${version}.zip"/>
   <property name="web.site"        value="http://jena.sourceforge.net/" />
   <property name="jarfile"         value="${name}.jar"/>
   <property name="arq.jarfile"     value="arq.jar"/>
