--- a/build.xml
+++ b/build.xml
@@ -4,7 +4,7 @@
   <!-- <property file="tdb-build.properties"/> -->
 
   <!-- ========================================== -->
-  <!-- ==== Configuration  -->
+  <!-- ==== Configuration -->
   <property name="Name"                   value="TDB"/>
   <property name="name"                   value="tdb"/>
 
@@ -14,7 +14,7 @@
   <property name="version-major"   	value="0"/>
   <property name="version-minor"        value="8"/>
   <property name="version-revision"     value="0"/>
-  <property name="version-status"       value="-dev"/>
+  <property name="version-status"       value="-RC-2"/>
   <property name="version"
             value="${version-major}.${version-minor}.${version-revision}${version-status}"/>
   
@@ -35,7 +35,8 @@
   <property name="src.dev.dir"            value="src-dev"/>
 
   <!-- Coordinate with ivysetting.xml -->
-  <property name="publish.resolver"       value="dev-publish"/>
+  <!-- repo-publish, repo-local -->
+  <property name="publish.resolver"       value="repo-local"/>
 
 
   <!-- Metadata -->
@@ -77,6 +78,8 @@
 
   <import file="build-lib.xml"/>
   <import file="build-dist.xml"/>
+
+  <target name="publish-release" depends="clean-once,publish,release"/>
 
   <target name="pre-run-junit">
     <mkdir dir="tmp/testing"/>
