git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/TDB/trunk@1121523 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -14,7 +14,7 @@
   <property name="version-major"   	value="0"/>
   <property name="version-minor"        value="8"/>
   <property name="version-revision"     value="1"/>
-  <property name="version-status"       value="-dev"/>
+  <property name="version-status"       value="-RC-2"/>
   <property name="version"
             value="${version-major}.${version-minor}.${version-revision}${version-status}"/>
   
@@ -37,7 +37,6 @@
   <!-- Coordinate with ivysetting.xml -->
   <!-- repo-publish, repo-local -->
   <property name="publish.resolver"       value="repo-publish"/>
-
 
   <!-- Metadata -->
   <property name="build.metadata.file"	       value="com/hp/hpl/jena/tdb/tdb-properties.xml"/>
