--- a/build.xml
+++ b/build.xml
@@ -14,7 +14,7 @@
   <property name="version-major"   	value="0"/>
   <property name="version-minor"        value="8"/>
   <property name="version-revision"     value="1"/>
-  <property name="version-status"       value="-RC-2"/>
+  <property name="version-status"       value=""/>
   <property name="version"
             value="${version-major}.${version-minor}.${version-revision}${version-status}"/>
   
