--- a/build.xml
+++ b/build.xml
@@ -11,10 +11,10 @@
   <property environment="env"/>
 
   <!-- The major and minor version numbers  -->
-  <property name="version-major"   	value="0"/>
+  <property name="version-major"        value="0"/>
   <property name="version-minor"        value="8"/>
-  <property name="version-revision"     value="1"/>
-  <property name="version-status"       value=""/>
+  <property name="version-revision"     value="2"/>
+  <property name="version-status"       value="-dev"/>
   <property name="version"
             value="${version-major}.${version-minor}.${version-revision}${version-status}"/>
   
