--- a/ivy.xml
+++ b/ivy.xml
@@ -31,10 +31,9 @@
 
     <dependency org="com.hp.hpl.jena" name="jena" rev="2.6.0"/>
     <dependency org="com.hp.hpl.jena" name="jenatest" rev="2.6.0"/>
-    <dependency org="com.hp.hpl.jena" name="json-jena" rev="1.0"/>
     <dependency org="org.apache.lucene" name="lucene-core" rev="2.3.1"/>
-    <dependency org="stax" name="stax-api" rev="1.0"/>
-    <dependency org="woodstox" name="wstx-asl" rev="3.0.0"/>
+    <dependency org="stax" name="stax-api" rev="1.0.1"/>
+    <dependency org="org.codehaus.woodstox" name="wstx-asl" rev="3.2.9"/>
     <dependency org="junit" name="junit" rev="4.5"/>
     <dependency org="org.slf4j" name="slf4j-api" rev="1.5.6"/>
   </dependencies>
