--- a/build.xml
+++ b/build.xml
@@ -10,12 +10,13 @@
   <property name="name"            value="jena"/>
 
   <!-- Release version labels -->
-  <property name="version-major"   value="2"/>
-  <property name="version-minor"   value="6.1"/>
+  <property name="version-major"    value="2"/>
+  <property name="version-minor"    value="6"/>
+  <property name="version-revision" value="1"/>
   <!-- e.g. -beta1, or empty string for stable releases -->
-  <property name="version-status"  value="-dev"/>
+  <property name="version-status"   value="-dev"/>
 
-  <property name="version"         value="${version-major}.${version-minor}${version-status}"/>
+  <property name="version"         value="${version-major}.${version-minor}.${version-revision}${version-status}"/>
 
   <!-- Output file names and locations -->
   <property name="dist.name"       value="${Name}-${version}"/>
@@ -63,12 +64,13 @@
 
   <!-- keyword substitutions -->
   <filterset id="filters.shared">
-    <filter token="Name"          value="${Name}" />
-    <filter token="website"       value="${web.site}" />
-    <filter token="version-major" value="${version-major}" />
-    <filter token="version-minor" value="${version-minor}" />
-    <filter token="version-status" value="${version-status}" />
-    <filter token="version"       value="${version}" />
+    <filter token="Name"             value="${Name}" />
+    <filter token="website"          value="${web.site}" />
+    <filter token="version-major"    value="${version-major}" />
+    <filter token="version-minor"    value="${version-minor}" />
+    <filter token="version-revision" value="${version-revision}" />
+    <filter token="version-status"   value="${version-status}" />
+    <filter token="version"          value="${version}" />
   </filterset>
 
   <!-- Primary externally visible targets -->
