Build timestamp now uses XSD dateTime format (i.e. "yyyy-MM-dd'T'HH:mm:ss.S").
git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-CVS/jena2/trunk@1113826 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -124,7 +124,7 @@
     <delete dir="${bldsrc.dir}"/>
     <mkdir  dir="${bldsrc.dir}"/>
     <tstamp>
-      <format property="BUILD_TIME" pattern="d-MMMM-yyyy HH:mm"/>
+      <format property="BUILD_TIME" pattern="yyyy-MM-dd'T'HH:mm:ss.S"/>
     </tstamp>
     <copy todir="${bldsrc.dir}" >
       <fileset dir="${src.dir}" excludes="**/CVS"/>
