--- a/build.xml
+++ b/build.xml
@@ -5,9 +5,9 @@
     
     <!-- The major and minor version numbers  -->
     <property name="version-major"        value="1"/>
-    <property name="version-minor"        value="3"/>
+    <property name="version-minor"        value="4"/>
     <property name="version-revision"     value="0"/>
-    <property name="version-status"       value=""/>
+    <property name="version-status"       value="-dev"/>
     <property name="version"
               value="${version-major}.${version-minor}.${version-revision}${version-status}"/>
 
