git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/TDB/trunk@1121616 13f79535-47bb-0310-9956-ffa450edef68

--- a/log4j.properties
+++ b/log4j.properties
@@ -31,3 +31,6 @@ log4j.logger.com.hp.hpl.jena.tdb.info=INFO
 log4j.logger.com.hp.hpl.jena.tdb.exec=INFO
 
 #log4j.logger.com.hp.hpl.jena.tdb.base.block.BlockMgrCache=DEBUG
+
+# Development
+log4j.logger.dev = ALL
