--- a/pom.xml
+++ b/pom.xml
@@ -101,20 +101,21 @@
 	    </goals>
 	  </execution>
 	</executions>
+	<configuration>
+          <quiet>true</quiet>
+	</configuration>
       </plugin>
+
       
       <plugin>
 	<artifactId>maven-assembly-plugin</artifactId>
 	<version>2.2-beta-3</version>
-
 	<configuration>
 	  <descriptors>
 	    <descriptor>assembly.xml</descriptor>
 	  </descriptors>
 	</configuration>
-
       </plugin>
-
     </plugins>
 
   </build>
