*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-CVS/iri/trunk@1108438 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,7 @@
 	<configuration>
 	  <source>1.5</source>
 	  <target>1.5</target>
+	  <encoding>UTF-8</encoding>
 	</configuration>
       </plugin>
 
@@ -103,9 +104,9 @@
 	</executions>
 	<configuration>
           <quiet>true</quiet>
+	  <encoding>UTF-8</encoding>
 	</configuration>
       </plugin>
-
       
       <plugin>
 	<artifactId>maven-assembly-plugin</artifactId>
@@ -116,6 +117,15 @@
 	  </descriptors>
 	</configuration>
       </plugin>
+
+      <plugin>
+	<groupId>org.apache.maven.plugins</groupId>
+	<artifactId>maven-resources-plugin</artifactId>
+	<configuration>
+	  <encoding>UTF-8</encoding>
+        </configuration>
+      </plugin>
+      
     </plugins>
 
   </build>
